--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf ./build && webpack --config webpack.prod.config.js",
-    "dev": "webpack-dev-server --hot --inline --config webpack.dev.config.js"
+    "dev": "webpack-dev-server --config webpack.dev.config.js"
   },
   "repository": {
     "type": "git",
@@ -24,12 +24,12 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
-    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.3",
+    "core-js": "^3.1.4",
     "css-loader": "^3.0.0",
     "dat.gui": "^0.7.6",
     "eslint": "^5.3.0",
@@ -48,6 +48,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "regenerator": "^0.14.1",
     "reset-css": "^4.0.1",
     "rxjs": "^6.5.2",
     "style-loader": "^0.23.1",
