--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "chrome-dino",
+  "name": "frontend-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf ./build && webpack --config webpack.prod.config.js",
+    "build": "webpack --config webpack.prod.config.js",
+    "lint": "eslint \"./src/**/*.@(js|jsx)\"",
+    "test": "jest --verbose",
     "dev": "webpack-dev-server --config webpack.dev.config.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ugotit666/chrome-dino.git"
+    "url": "git+https://github.com/ugotit666/frontend-boilerplate.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ugotit666/chrome-dino/issues"
+    "url": "https://github.com/ugotit666/frontend-boilerplate/issues"
   },
-  "homepage": "https://github.com/ugotit666/chrome-dino#readme",
+  "homepage": "https://github.com/ugotit666/frontend-boilerplate#readme",
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-proposal-partial-application": "^7.4.4",
     "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
+    "@babel/plugin-proposal-private-methods": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "core-js": "^3.1.4",
     "css-loader": "^3.0.0",
@@ -41,14 +46,19 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
+    "eventemitter3": "^4.0.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.1",
+    "image-webpack-loader": "^5.0.0",
+    "jest": "^24.8.0",
+    "lint-staged": "^9.2.1",
     "pixi.js": "^5.0.4",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "regenerator": "^0.14.1",
+    "regenerator-runtime": "^0.13.3",
     "reset-css": "^4.0.1",
     "rxjs": "^6.5.2",
     "style-loader": "^0.23.1",
