--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.prod.config.js",
+    "build": "NODE_ENV=production webpack --config webpack.prod.config.js",
     "lint": "eslint \"./src/**/*.@(js|jsx)\"",
     "test": "jest --verbose",
-    "dev": "webpack-dev-server --config webpack.dev.config.js"
+    "dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.config.js"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "core-js": "^3.1.4",
     "css-loader": "^3.0.0",
     "dat.gui": "^0.7.6",
+    "dotenv": "^8.0.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^5.0.0",
